--- a/Profire Page/index.html
+++ b/Profire Page/index.html
@@ -23,7 +23,7 @@
 					<li class="nav-item"><a href="#">Project</a></li>
 					<li class="nav-item"><a href="#">Contact</a></li>
 					<li class="nav-item">
-						<a href="#"><i class="fa-solid fa-moon"></i></a>
+						<a href="#" id="dark-mode"><i class="fa-solid fa-moon"></i></a>
 					</li>
 				</ul>
 			</nav>
@@ -92,7 +92,9 @@
 			</aside>
 			<section class="content">
 				<div class="card">
-					<img src="images/post (1).jpg" alt="post 1" />
+					<div class="card-image-wrapper">
+						<img src="images/post (1).jpg" alt="post 1" />
+					</div>
 					<h4>Project 1</h4>
 					<p>
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
@@ -101,7 +103,9 @@
 					</p>
 				</div>
 				<div class="card">
-					<img src="images/post (2).jpg" alt="post 1" />
+					<div class="card-image-wrapper">
+						<img src="images/post (2).jpg" alt="post 2" />
+					</div>
 					<h4>Project 2</h4>
 					<p>
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
@@ -110,7 +114,9 @@
 					</p>
 				</div>
 				<div class="card">
-					<img src="images/post (3).jpg" alt="post 1" />
+					<div class="card-image-wrapper">
+						<img src="images/post (3).jpg" alt="post 3" />
+					</div>
 					<h4>Project 3</h4>
 					<p>
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
@@ -119,7 +125,9 @@
 					</p>
 				</div>
 				<div class="card">
-					<img src="images/post (4).jpg" alt="post 1" />
+					<div class="card-image-wrapper">
+						<img src="images/post (4).jpg" alt="post 4" />
+					</div>
 					<h4>Project 4</h4>
 					<p>
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
@@ -132,5 +140,6 @@
 		<footer>
 			<p>&copy; 2025 Mammad Davari</p>
 		</footer>
+    <script src="./js/script.js"></script>
 	</body>
 </html>
