correct scroll effect

--- a/Profire Page/index.html
+++ b/Profire Page/index.html
@@ -51,42 +51,44 @@
 						<a href="https://github.com/">Github</a>
 					</section>
 				</div>
-				<p>Skills</p>
-				<div class="skills" data-aos="fade-up">
-					<div class="skill">
-						<div class="skill-name">
-							<span>HTML</span>
-							<span>90%</span>
+				<div data-aos="fade-up">
+					<p>Skills</p>
+					<div class="skills">
+						<div class="skill">
+							<div class="skill-name">
+								<span>HTML</span>
+								<span>90%</span>
+							</div>
+							<div class="skill-progress">
+								<progress id="html" value="90" max="100"></progress>
+							</div>
 						</div>
-						<div class="skill-progress">
-							<progress id="html" value="90" max="100"></progress>
+						<div class="skill">
+							<div class="skill-name">
+								<span>CSS</span>
+								<span>80%</span>
+							</div>
+							<div class="skill-progress">
+								<progress id="css" value="80" max="100"></progress>
+							</div>
 						</div>
-					</div>
-					<div class="skill">
-						<div class="skill-name">
-							<span>CSS</span>
-							<span>80%</span>
+						<div class="skill">
+							<div class="skill-name">
+								<span>JavaScript</span>
+								<span>75%</span>
+							</div>
+							<div class="skill-progress">
+								<progress id="js" value="75" max="100"></progress>
+							</div>
 						</div>
-						<div class="skill-progress">
-							<progress id="css" value="80" max="100"></progress>
-						</div>
-					</div>
-					<div class="skill">
-						<div class="skill-name">
-							<span>JavaScript</span>
-							<span>75%</span>
-						</div>
-						<div class="skill-progress">
-							<progress id="js" value="75" max="100"></progress>
-						</div>
-					</div>
-					<div class="skill">
-						<div class="skill-name">
-							<span>svelte</span>
-							<span>85%</span>
-						</div>
-						<div class="skill-progress">
-							<progress id="html" value="85" max="100"></progress>
+						<div class="skill">
+							<div class="skill-name">
+								<span>svelte</span>
+								<span>85%</span>
+							</div>
+							<div class="skill-progress">
+								<progress id="html" value="85" max="100"></progress>
+							</div>
 						</div>
 					</div>
 				</div>
