--- a/test/index.html
+++ b/test/index.html
@@ -7,8 +7,13 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<div class="first">
-      		<div class="second"></div>
+		<div class="wrapper">
+      <div class="item">HTML</div>
+      <div class="item">CSS</div>
+      <div class="item">JavaScript</div>
+      <div class="item">TailwindCSS</div>
+      <div class="item">Svelte</div>
+      		
     </div>
 
 	</body>
