--- a/Profire Page/index.html
+++ b/Profire Page/index.html
@@ -34,109 +34,125 @@
 			</section>
 		</header>
 		<main>
-			<aside data-aos="fade-up">
+			<section class="profile-sec main-item" data-aos="fade-up">
+				<h3>Profile</h3>
 				<div class="profile">
-					<section class="profile-pic">
+					<div class="profile-pic">
 						<img src="images/profile.jpg" alt="profile" />
 						<p>Mammad Davari</p>
-					</section>
-					<section class="description">
+					</div>
+					<div class="description">
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae quos
 						tenetur odio optio, ex repellendus eligendi magni quisquam veritatis
 						aliquid cupiditate aut quasi saepe quaerat.
-					</section>
+					</div>
 					<section class="links">
 						<a href="https://x.com">X</a>
 						<a href="https://www.linkedin.com/">LinkedIn</a>
 						<a href="https://github.com/">Github</a>
 					</section>
 				</div>
-				<div data-aos="fade-up">
-					<p>Skills</p>
-					<div class="skills">
-						<div class="skill">
-							<div class="skill-name">
-								<span>HTML</span>
-								<span>90%</span>
-							</div>
-							<div class="skill-progress">
-								<progress id="html" value="90" max="100"></progress>
-							</div>
+			</section>
+			<section class="main-item skills-sec" data-aos="fade-up">
+				<h3>Skills</h3>
+				<div class="skills">
+					<div class="skill">
+						<div class="skill-name">
+							<span>HTML</span>
+							<span>90%</span>
 						</div>
-						<div class="skill">
-							<div class="skill-name">
-								<span>CSS</span>
-								<span>80%</span>
-							</div>
-							<div class="skill-progress">
-								<progress id="css" value="80" max="100"></progress>
-							</div>
+						<div class="skill-progress">
+							<progress id="html" value="90" max="100"></progress>
 						</div>
-						<div class="skill">
-							<div class="skill-name">
-								<span>JavaScript</span>
-								<span>75%</span>
-							</div>
-							<div class="skill-progress">
-								<progress id="js" value="75" max="100"></progress>
-							</div>
+					</div>
+					<div class="skill">
+						<div class="skill-name">
+							<span>CSS</span>
+							<span>80%</span>
 						</div>
-						<div class="skill">
-							<div class="skill-name">
-								<span>svelte</span>
-								<span>85%</span>
-							</div>
-							<div class="skill-progress">
-								<progress id="html" value="85" max="100"></progress>
-							</div>
+						<div class="skill-progress">
+							<progress id="css" value="80" max="100"></progress>
+						</div>
+					</div>
+					<div class="skill">
+						<div class="skill-name">
+							<span>JavaScript</span>
+							<span>75%</span>
+						</div>
+						<div class="skill-progress">
+							<progress id="js" value="75" max="100"></progress>
+						</div>
+					</div>
+					<div class="skill">
+						<div class="skill-name">
+							<span>svelte</span>
+							<span>85%</span>
+						</div>
+						<div class="skill-progress">
+							<progress id="html" value="85" max="100"></progress>
 						</div>
 					</div>
 				</div>
-			</aside>
-			<section class="content" data-aos="fade-up">
-				<div class="card">
-					<div class="card-image-wrapper">
-						<img src="images/post (1).jpg" alt="post 1" />
+			</section>
+			<section class="main-item timeline-sec" data-aos="fade-up">
+				<h3>Time Line</h3>
+				<div class="timeline">
+					<div class="timeline-wrapper">
+						<span class="timeline-item">HTML</span>
+						<span class="timeline-item">CSS</span>
+						<span class="timeline-item">Tailwindcss</span>
+						<span class="timeline-item">JavaScript</span>
+						<span class="timeline-item">svelte</span>
 					</div>
-					<h4>Project 1</h4>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-						quod beatae sunt odit sint repudiandae atque non reiciendis soluta
-						culpa?
-					</p>
 				</div>
-				<div class="card">
-					<div class="card-image-wrapper">
-						<img src="images/post (2).jpg" alt="post 2" />
+			</section>
+			<section class="main-item projects-sec" data-aos="fade-up">
+				<h3>Projects</h3>
+				<div class="projects">
+					<div class="card">
+						<div class="card-image-wrapper">
+							<img src="images/post (1).jpg" alt="post 1" />
+						</div>
+						<h4>Project 1</h4>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+							quod beatae sunt odit sint repudiandae atque non reiciendis soluta
+							culpa?
+						</p>
 					</div>
-					<h4>Project 2</h4>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-						quod beatae sunt odit sint repudiandae atque non reiciendis soluta
-						culpa?
-					</p>
-				</div>
-				<div class="card">
-					<div class="card-image-wrapper">
-						<img src="images/post (3).jpg" alt="post 3" />
+					<div class="card">
+						<div class="card-image-wrapper">
+							<img src="images/post (2).jpg" alt="post 2" />
+						</div>
+						<h4>Project 2</h4>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+							quod beatae sunt odit sint repudiandae atque non reiciendis soluta
+							culpa?
+						</p>
 					</div>
-					<h4>Project 3</h4>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-						quod beatae sunt odit sint repudiandae atque non reiciendis soluta
-						culpa?
-					</p>
-				</div>
-				<div class="card">
-					<div class="card-image-wrapper">
-						<img src="images/post (4).jpg" alt="post 4" />
+					<div class="card">
+						<div class="card-image-wrapper">
+							<img src="images/post (3).jpg" alt="post 3" />
+						</div>
+						<h4>Project 3</h4>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+							quod beatae sunt odit sint repudiandae atque non reiciendis soluta
+							culpa?
+						</p>
 					</div>
-					<h4>Project 4</h4>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
-						quod beatae sunt odit sint repudiandae atque non reiciendis soluta
-						culpa?
-					</p>
+					<div class="card">
+						<div class="card-image-wrapper">
+							<img src="images/post (4).jpg" alt="post 4" />
+						</div>
+						<h4>Project 4</h4>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+							quod beatae sunt odit sint repudiandae atque non reiciendis soluta
+							culpa?
+						</p>
+					</div>
 				</div>
 			</section>
 		</main>
