--- a/Profire Page/index.html
+++ b/Profire Page/index.html
@@ -17,8 +17,11 @@
 	<body>
 		<header>
 			<nav>
-				<div class="logo"><p>LOGO</p></div>
-				<ul>
+				<div class="logo-menu">
+					<span class="menu-btn"><i class="fa-solid fa-bars"></i></span>
+					<div class="logo"><p>LOGO</p></div>
+				</div>
+				<ul class="menu">
 					<li class="nav-item"><a href="#">Home</a></li>
 					<li class="nav-item"><a href="#">About</a></li>
 					<li class="nav-item"><a href="#">Project</a></li>
@@ -28,7 +31,7 @@
 					</li>
 				</ul>
 			</nav>
-			<section>
+			<section class="follow">
 				<p>Mammad Davari</p>
 				<input type="button" value="Follow" />
 			</section>
