--- a/javascript/Notes/index.html
+++ b/javascript/Notes/index.html
@@ -13,15 +13,17 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class="max-w-5xl mx-auto border-gray-200 h-dvh dark:bg-gray-900">
+  <body class="max-w-5xl mx-auto border-gray-200 dark:bg-gray-900">
     <!-- header section-->
     <header
       class="flex items-center gap-2 px-4 py-2 h-13 border-b border-gray-200 dark:border-gray-700"
     >
       <!-- header left -->
       <div class="flex items-center flex-1 gap-2">
-        <i class="fa-solid fa-bars"></i>
-        <span class="text-lg font-semibold">Note</span>
+        <i class="fa-solid fa-bars md:hidden!" id="menu-btn"></i>
+        <span class="text-lg font-semibold"
+          >Note <i class="fa-solid fa-heart text-sm hidden! sm:inline!"></i
+        ></span>
       </div>
 
       <!-- header middle -->
@@ -40,7 +42,7 @@
 
       <!-- header right -->
       <div class="flex items-center flex-1 justify-center gap-4">
-        <i class="fa-solid fa-rotate-right"></i>
+        <i class="fa-solid fa-rotate-right cursor-pointer" id="reload"></i>
         <div class="">
           <img
             src="./assets/images/Profile.jpg"
@@ -53,16 +55,17 @@
     <!--end header section-->
     <!-- side menu -->
     <menu
-      class="w-13 bg-white dark:bg-gray-900 absolute overflow-hidden h-dvh shadow-[1px_0px_2px_rgba(0,0,0,0.1)] py-2"
+      class="w-13 md:w-52 bg-white dark:bg-gray-900 absolute overflow-hidden h-[calc(100dvh-54px)] shadow-[1px_0px_2px_rgba(0,0,0,0.1)] py-2"
+      id="menu"
     >
-      <ul>
+      <ul class="flex flex-col gap-1 px-4">
         <li class="menu-item">
           <div class="w-10">
             <i class="fa-solid fa-note-sticky"></i>
           </div>
           <span>Notes</span>
         </li>
-        <li class="menu-item">
+        <li class="menu-item" id="dark-toggle">
           <div class="w-10">
             <i class="fa-solid fa-moon"></i>
           </div>
@@ -75,112 +78,68 @@
           <span>Trash</span>
         </li>
       </ul>
-      <p class="absolute w-60 hidden bottom-4 left-4 text-sm">
+      <p id="copy" class="absolute w-60 hidden md:block bottom-4 left-4 text-sm">
         &copy; Thisismammad Davari
       </p>
     </menu>
     <!-- end side menu -->
 
     <!-- main section -->
-    <main class="ml-15 mr-2 mt-2">
+    <main class="ml-15 md:ml-56 mr-2 mt-2">
       <!-- add note section -->
       <section
-        class="max-w-2xl mx-auto flex flex-col items-center p-4 rounded-md shadow-md shadow-gray-300 dark:shadow-gray-800"
+        class="max-w-2xl mx-auto flex flex-col items-center p-4 rounded-md shadow-[0px_0px_3px_rgba(0,0,0,0.2)] dark:shadow-gray-800"
       >
         <!-- add note section -->
-        <section class="overflow-hidden w-full">
+        <section
+          class="overflow-hidden h-6 w-full"
+          id="input-txt-sec"
+          tabindex="1"
+        >
           <textarea
             type="text"
-            name="title"
-            id="title"
+            name="input-title"
+            id="input-title"
             placeholder="Title"
             class="focus:outline-none hidden w-full font-bold field-sizing-content resize-none"
           ></textarea>
           <textarea
             type="text"
-            name="note"
-            id="note"
+            name="input-txt"
+            id="input-txt"
             placeholder="take a note..."
             class="focus:outline-none flex flex-wrap w-full field-sizing-content resize-none"
           ></textarea>
-          <div class="flex items-center justify-between mt-4 max-w-52 mx-auto">
+          <div class="flex flex-col sm:flex-row items-center gap-3 justify-between mt-4 max-w-52 mx-auto">
             <div class="flex gap-2">
+              <span class="color-plate"></span>
               <span class="color-plate bg-rose-400 dark:bg-rose-800"></span>
-              <span class="color-plate bg-cyan-400 dark:bg-syan-800"></span>
+              <span class="color-plate bg-cyan-400 dark:bg-cyan-800"></span>
               <span class="color-plate bg-yellow-400 dark:bg-yellow-800"></span>
-              <span class="color-plate bg-emerald-400 dark:bg-emerald-800"></span>
+              <span
+                class="color-plate bg-emerald-400 dark:bg-emerald-800"
+              ></span>
             </div>
             <input
               type="button"
-              value="Add note"
-              class="py-1 px-3 rounded-2xl text-white hover:bg-yellow-600 bg-yellow-500 dark:bg-yellow-700"
+              id="add-note-btn"
+              value="+ Add note"
+              class="py-2 px-3 rounded-md text-sm text-gray-50 dark:text-gray-300 cursor-pointer hover:bg-violet-600 bg-violet-500 dark:bg-violet-700"
             />
           </div>
         </section>
-        <!-- notes list section -->
-        <section></section>
       </section>
       <!-- end add note section -->
 
-      <!-- notes section -->
+      <!-- note list section -->
       <section class="mt-8">
-        <p class="font-medium dark:text-gray-300">Notes</p>
+        <p class="font-medium dark:text-gray-300">Notes:</p>
         <section
-          class="mt-4 flex flex-wrap gap-2 mb-4"
-        >
-          <!-- column 1 -->
-          <div class="note-column">
-            <div class="note bg-rose-400 dark:bg-rose-900">
-              <h3 class="note-title">Title</h3>
-              <p class="note-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam
-                consequuntur facilis dolores labore ipsam necessitatibus
-                assumenda. At cumque facilis
-              </p>
-            </div>
-            <div class="note bg-cyan-400 dark:bg-cyan-900">
-              <h3 class="note-title">Title</h3>
-              <p class="note-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam
-                consequuntur facilis 
-              </p>
-            </div>
-            <div class="note bg-cyan-400 dark:bg-cyan-900">
-              <h3 class="note-title">Title</h3>
-              <p class="note-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam
-                consequuntur facilis dolores labore ipsam necessitatibus
-                assumenda. At cumque facilis
-              </p>
-            </div>
-          </div>
-          <!-- column 2 -->
-          <div class="note-column">
-            <div class="note bg-cyan-400 dark:bg-emerald-900">
-              <h3 class="note-title">Title</h3>
-              <p class="note-text">Lorem ipsum</p>
-            </div>
-            <div class="note bg-emerald-400 dark:bg-emerald-900">
-              <h3 class="note-title">Title</h3>
-              <p class="note-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam
-                consequuntur facilis
-              </p>
-            </div>
-          </div>
-          <!-- column 3 -->
-          <div class="note-column">
-            <div class="note bg-emerald-400 dark:bg-emerald-900">
-              <h3 class="note-title">Title</h3>
-              <p class="note-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam
-                consequuntur facilis
-              </p>
-            </div>
-          </div>
-        </section>
+          id="note-list"
+          class="mt-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-2 mb-4"
+        ></section>
       </section>
-      <!-- end notes section -->
+      <!-- end note list section -->
     </main>
     <!-- end main section -->
     <script src="./assets/js/script.js"></script>
