--- a/javascript/Notes/index.html
+++ b/javascript/Notes/index.html
@@ -53,7 +53,7 @@
     <!--end header section-->
     <!-- side menu -->
     <menu
-      class="w-13 md:w-52 bg-white dark:bg-gray-900 absolute overflow-hidden h-[calc(100dvh-54px)] shadow-[1px_0px_2px_rgba(0,0,0,0.1)] py-2"
+      class="w-13 md:w-52 transition-all duration-500 bg-white dark:bg-gray-900 absolute overflow-hidden h-[calc(100dvh-54px)] shadow-[1px_0px_2px_rgba(0,0,0,0.1)] py-2"
       id="menu"
     >
       <ul class="flex flex-col gap-1 px-2">
@@ -93,7 +93,7 @@
       >
         <!-- add note section -->
         <section
-          class="overflow-hidden h-6 w-full"
+          class="overflow-hidden close-input w-full transition-all duration-500"
           id="input-txt-sec"
           tabindex="1"
         >
