delete note function, change some colors

--- a/javascript/Notes/index.html
+++ b/javascript/Notes/index.html
@@ -13,7 +13,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class="max-w-5xl mx-auto border-gray-200 dark:bg-gray-900">
+  <body class="max-w-5xl min-h-dvh mx-auto relative border-gray-200 dark:bg-gray-900">
     <!-- header section-->
     <header
       class="flex items-center gap-2 px-4 py-2 h-13 border-b border-gray-200 dark:border-gray-700"
@@ -53,7 +53,7 @@
     <!--end header section-->
     <!-- side menu -->
     <menu
-      class="w-13 md:w-52 transition-all duration-500 bg-white dark:bg-gray-900 absolute overflow-hidden h-[calc(100dvh-54px)] shadow-[1px_0px_2px_rgba(0,0,0,0.1)] py-2"
+      class="w-13 md:w-52 transition-all duration-500 bg-white dark:bg-gray-900 absolute overflow-hidden z-50 bottom-0 top-14 shadow-[1px_0px_2px_rgba(0,0,0,0.1)] py-2"
       id="menu"
     >
       <ul class="flex flex-col gap-1 px-2">
@@ -93,7 +93,7 @@
       >
         <!-- add note section -->
         <section
-          class="overflow-hidden close-input w-full transition-all duration-500"
+          class="overflow-hidden close-input w-full transition-[max-height] duration-500"
           id="input-txt-sec"
           tabindex="1"
         >
@@ -115,7 +115,7 @@
             class="flex flex-col sm:flex-row items-center gap-3 justify-between mt-4 max-w-52 mx-auto"
           >
             <div class="flex gap-2">
-              <span class="color-plate"></span>
+              <span class="color-plate dark:bg-gray-900 bg-white"></span>
               <span class="color-plate bg-rose-400 dark:bg-rose-800"></span>
               <span class="color-plate bg-cyan-400 dark:bg-cyan-800"></span>
               <span class="color-plate bg-yellow-400 dark:bg-yellow-800"></span>
