fixed side menu show and hide

--- a/javascript/Notee/index.html
+++ b/javascript/Notee/index.html
@@ -80,7 +80,7 @@
         id="copy"
         class="absolute w-60 hidden md:block bottom-4 left-4 text-sm"
       >
-        &copy; Thisismammad Davari
+        &copy; Thisismammad
       </p>
     </menu>
     <!-- end side menu -->
