sveltekit Gainzatron project: add dark and light toggle btn

--- a/Svelte-kit/gainzatron/src/app.html
+++ b/Svelte-kit/gainzatron/src/app.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="bg-primary-light font-roboto text-primary-dark dark:text-primary-light dark:bg-primary-dark">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+		<script src="%sveltekit.assets%/theme-toggle.js"></script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
